--- a/package.json
+++ b/package.json
@@ -1,11 +1,10 @@
 {
-  "name": "ajv-formats",
-  "version": "3.0.1",
-  "description": "Format validation for Ajv v7+",
+  "name": "@theflashlabs/ajv-formats",
+  "version": "0.0.1",
+  "description": "Format validation for Ajv-Plus",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "files": [
-    "src/",
     "dist/"
   ],
   "scripts": {
@@ -20,7 +19,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/ajv-validator/ajv-formats.git"
+    "url": "git+https://github.com/theflashlabs/ajv-formats.git"
   },
   "keywords": [
     "Ajv",
@@ -28,20 +27,17 @@
     "format",
     "validation"
   ],
-  "author": "Evgeny Poberezkin",
+  "author": "Balakrishna Avulapati",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/ajv-validator/ajv-formats/issues"
+    "url": "https://github.com/theflashlabs/ajv-formats/issues"
   },
-  "homepage": "https://github.com/ajv-validator/ajv-formats#readme",
-  "dependencies": {
-    "ajv": "^8.0.0"
-  },
+  "homepage": "https://github.com/theflashlabs/ajv-formats#readme",
   "peerDependencies": {
-    "ajv": "^8.0.0"
+    "@theflashlabs/ajv-plus": "^0.0.1"
   },
   "peerDependenciesMeta": {
-    "ajv": {
+    "@theflashlabs/ajv-plus": {
       "optional": true
     }
   },
@@ -51,7 +47,7 @@
     "@types/node": "^14.10.1",
     "@typescript-eslint/eslint-plugin": "^3.7.0",
     "@typescript-eslint/parser": "^3.7.0",
-    "ajv": "^8.0.0",
+    "@theflashlabs/ajv-plus": "^0.0.1",
     "eslint": "^7.5.0",
     "eslint-config-prettier": "^6.11.0",
     "husky": "^4.2.5",
